# MC_CPP

./: .gitignore  AGENTS.md  CMakeLists.txt  Link.txt  MC-CPP.desktop  compile.bat  compile.sh  info.md
assets/shaders/alpha_lighting/: vert.glsl
assets/shaders/colored_lighting/: frag.glsl  vert.glsl
assets/shaders/post/: frag.glsl
assets/shaders/shadow/: frag.glsl  vert.glsl
assets/shaders/ui/: block_preview_frag.glsl  block_preview_vert.glsl  quad_frag.glsl  quad_rounded_frag.glsl  quad_rounded_vert.glsl  quad_vert.glsl  triangle_frag.glsl  triangle_vert.glsl
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
include/glfw/: cmake_uninstall.cmake
include/glfw/src/: glfw3.pc
src/: audio.cpp  audio.h  inventory.cpp  inventory.h  inventory_ui.cpp  inventory_ui.h  main.cpp  nbt_utils.cpp  nbt_utils.h  options.h  save.cpp  save.h  text_renderer.cpp  text_renderer.h  util.h  world.cpp  world.h
src/chunk/: chunk.cpp  chunk.h  subchunk.cpp  subchunk.h
src/entity/: entity.cpp  entity.h  item_entity.cpp  item_entity.h  player.cpp  player.h
src/menu/: menu.cpp  menu.h  menu_item.cpp  menu_item.h  settings_menu.h
src/models/: all_models.h  model_data.h  models.cpp
src/physics/: collider.h  hit.cpp  hit.h
src/renderer/: block_preview_renderer.cpp  block_preview_renderer.h  block_type.cpp  block_type.h  post_processor.h  shader.cpp  shader.h  texture_manager.cpp  texture_manager.h  ui_quad_renderer.cpp  ui_quad_renderer.h
tests/: perf_bench.cpp  perf_hotspots.cpp  tests_main.cpp
